# Forge

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CHARTE_DOC.md  CONTRIBUTING.md  LICENSE  README.md  app.py  config.py  forge.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
cmd/: README.md  _common.py  make.py
concepts/: index.html
core/: __init__.py  application.py  forge.py
crud/: index.html
deployment/: index.html
docs/: concepts.md  crud.md  deployment.md  entity_architecture.md  guide.md  index.html  installation-developpement.md  installation-github.md  installation-mariadb.md  installation-pipx.md  installation-vm-debian.md  installation.md  pdf.md  positioning.md  reference-schema.md  reference.md  release-local.md  roadmap.md  starter-app-01-contact-simple.md  starter-app-01-contacts.md  starter-app-02-utilisateurs-auth.md  starter-app-03-carnet-contacts.md  starter-app-04-suivi-comportement-eleves.md  starter-app.md  starter-apps.md
entity_architecture/: index.html
env/: example
forge_cli/: __init__.py  deploy.py  doctor.py  output.py  project_config.py  starters.py  sync_landing.py  uploads.py
guide/: index.html
mvc/: routes.py
positioning/: index.html
reference/: index.html
roadmap/: index.html
search/: search_index.json
starter-app/: index.html
starter-app-01-contact-simple/: index.html
starter-app-02-utilisateurs-auth/: index.html
starter-app-03-carnet-contacts/: index.html
starter-app-04-suivi-comportement-eleves/: index.html
tests/: conftest.py  (+38 more)
(+158 files in other folders)
